hphp/hack/test/typecheck/async_hint8.php.exp
File "async_hint8.php", line 4, characters 30-44:
Was expecting an `Awaitable` return type hint (Typing[4174])
